// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterMenu Component Renders MenuCard with the dropdown icon Closed 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text>
      Menu Card Title
    </Text>
    <Text
      style={
        Object {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      Sub Text Closed
    </Text>
  </View>,
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <Icon
      color="#616161"
      name="keyboard-arrow-down"
      size={25}
    />
  </View>,
]
`;

exports[`FilterMenu Component Renders MenuCard with the dropdown icon Open 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text>
      Menu Card Title
    </Text>
    <Text
      style={
        Object {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      Sub Text Opened
    </Text>
  </View>,
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <Icon
      color="#616161"
      name="keyboard-arrow-up"
      size={25}
    />
  </View>,
]
`;

exports[`FilterMenu Component ShallowRender FilterMenu 1`] = `
<Context.Provider
  value={
    Object {
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "onStateChange": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <FilterMenuComponent
    areaOpen={false}
    areas={
      Array [
        Object {
          "area": "CENTER",
          "categories": Array [
            5,
            7,
            9,
            11,
            16,
          ],
        },
        Object {
          "area": "GM",
          "categories": Array [
            23,
            24,
            28,
            31,
          ],
        },
        Object {
          "area": "Fresh",
          "categories": Array [
            41,
            42,
            43,
            45,
            47,
            48,
          ],
        },
      ]
    }
    categoryMap={Array []}
    categoryOpen={false}
    dispatch={[MockFunction]}
    enableAreaFilter={false}
    exceptionOpen={false}
    filterCategories={Array []}
    filterExceptions={Array []}
    selectedWorklistGoal="ITEMS"
    showRollOverAudit={false}
    wlSummary={
      Array [
        Object {
          "totalCompletedItems": 94,
          "totalItems": 188,
          "worklistEndGoalPct": 100,
          "worklistGoal": "ITEMS",
          "worklistGoalDuration": "DAILY",
          "worklistGoalPct": 50,
          "worklistTypes": Array [
            Object {
              "completedItems": 50,
              "totalItems": 100,
              "worklistType": "NSFL",
            },
            Object {
              "completedItems": 25,
              "totalItems": 50,
              "worklistType": "C",
            },
            Object {
              "completedItems": 7,
              "totalItems": 14,
              "worklistType": "NO",
            },
            Object {
              "completedItems": 12,
              "totalItems": 24,
              "worklistType": "NS",
            },
          ],
        },
        Object {
          "totalCompletedItems": 1,
          "totalItems": 151,
          "worklistEndGoalPct": 100,
          "worklistGoal": "PALLETS",
          "worklistGoalDuration": "DAILY",
          "worklistGoalPct": 1,
          "worklistTypes": Array [
            Object {
              "completedItems": 0,
              "totalItems": 0,
              "worklistType": "MP",
            },
          ],
        },
        Object {
          "totalCompletedItems": 80,
          "totalItems": 151,
          "worklistEndGoalPct": 100,
          "worklistGoal": "AUDITS",
          "worklistGoalDuration": "DAILY",
          "worklistGoalPct": 60,
          "worklistTypes": Array [
            Object {
              "completedItems": 6,
              "totalItems": 20,
              "worklistType": "AU",
            },
            Object {
              "completedItems": 5,
              "totalItems": 5,
              "worklistType": "RA",
            },
          ],
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`FilterMenu Component ShallowRender FilterMenu with Audits WL Goal 1`] = `
<Context.Provider
  value={
    Object {
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "onStateChange": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <FilterMenuComponent
    areaOpen={false}
    areas={
      Array [
        Object {
          "area": "CENTER",
          "categories": Array [
            5,
            7,
            9,
            11,
            16,
          ],
        },
        Object {
          "area": "GM",
          "categories": Array [
            23,
            24,
            28,
            31,
          ],
        },
        Object {
          "area": "Fresh",
          "categories": Array [
            41,
            42,
            43,
            45,
            47,
            48,
          ],
        },
      ]
    }
    categoryMap={Array []}
    categoryOpen={false}
    dispatch={[MockFunction]}
    enableAreaFilter={false}
    exceptionOpen={false}
    filterCategories={Array []}
    filterExceptions={Array []}
    selectedWorklistGoal="AUDITS"
    showRollOverAudit={false}
    wlSummary={
      Array [
        Object {
          "totalCompletedItems": 94,
          "totalItems": 188,
          "worklistEndGoalPct": 100,
          "worklistGoal": "ITEMS",
          "worklistGoalDuration": "DAILY",
          "worklistGoalPct": 50,
          "worklistTypes": Array [
            Object {
              "completedItems": 50,
              "totalItems": 100,
              "worklistType": "NSFL",
            },
            Object {
              "completedItems": 25,
              "totalItems": 50,
              "worklistType": "C",
            },
            Object {
              "completedItems": 7,
              "totalItems": 14,
              "worklistType": "NO",
            },
            Object {
              "completedItems": 12,
              "totalItems": 24,
              "worklistType": "NS",
            },
          ],
        },
        Object {
          "totalCompletedItems": 1,
          "totalItems": 151,
          "worklistEndGoalPct": 100,
          "worklistGoal": "PALLETS",
          "worklistGoalDuration": "DAILY",
          "worklistGoalPct": 1,
          "worklistTypes": Array [
            Object {
              "completedItems": 0,
              "totalItems": 0,
              "worklistType": "MP",
            },
          ],
        },
        Object {
          "totalCompletedItems": 80,
          "totalItems": 151,
          "worklistEndGoalPct": 100,
          "worklistGoal": "AUDITS",
          "worklistGoalDuration": "DAILY",
          "worklistGoalPct": 60,
          "worklistTypes": Array [
            Object {
              "completedItems": 6,
              "totalItems": 20,
              "worklistType": "AU",
            },
            Object {
              "completedItems": 5,
              "totalItems": 5,
              "worklistType": "RA",
            },
          ],
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`FilterMenu Component Test renders the RenderAreaCard function and calls dispatch 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text>
      [missing "en.WORKLIST.AREA" translation]
    </Text>
    <Text
      style={
        Object {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      [missing "en.WORKLIST.ALL" translation]
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <Icon
      color="#616161"
      name="keyboard-arrow-down"
      size={25}
    />
  </View>
</View>
`;

exports[`FilterMenu Component Test renders the filter menu component and calls onPress Function 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#0071e9",
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffffff",
          "flex": 1,
          "marginLeft": 15,
        }
      }
    >
      [missing "en.WORKLIST.REFINE" translation]
    </Text>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 0.5,
          "marginRight": 15,
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffffff",
            "textAlign": "right",
          }
        }
      >
        [missing "en.WORKLIST.CLEAR" translation]
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.AREA" translation]
      </Text>
      <Text
        style={
          Object {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        [missing "en.WORKLIST.ALL" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-down"
        size={25}
      />
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.CATEGORY" translation]
      </Text>
      <Text
        style={
          Object {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        [missing "en.WORKLIST.ALL" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-down"
        size={25}
      />
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.EXCEPTION_TYPE" translation]
      </Text>
      <Text
        style={
          Object {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        [missing "en.WORKLIST.ALL" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-down"
        size={25}
      />
    </View>
  </View>
</View>
`;

exports[`FilterMenu Component Test renders the renderAreaCheckbox function 1`] = `
<Icon
  color="#0071e9"
  name="minus-box"
  size={15}
/>
`;

exports[`FilterMenu Component Test renders the renderCategoryCollapsibleCard and filteredCategories FlatList  1`] = `
Array [
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.CATEGORY" translation]
      </Text>
      <Text
        style={
          Object {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        5 [missing "en.GENERICS.SELECTED" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-up"
        size={25}
      />
    </View>
  </View>,
  <RCTScrollView
    data={
      Array [
        Object {
          "catgName": "WINE",
          "catgNbr": 19,
          "selected": false,
        },
        Object {
          "catgName": "PHARMACY RX",
          "catgNbr": 87,
          "selected": false,
        },
        Object {
          "catgName": "FRESH BAKERY",
          "catgNbr": 88,
          "selected": false,
        },
        Object {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "selected": false,
        },
        Object {
          "catgName": "ELECTRONICS",
          "catgNbr": 99,
          "selected": false,
        },
        Object {
          "catgName": "ELECTRONICS",
          "catgNbr": 199,
          "selected": false,
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "width": "90%",
              }
            }
          >
            19 - WINE 
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "width": "90%",
              }
            }
          >
            87 - PHARMACY RX 
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "width": "90%",
              }
            }
          >
            88 - FRESH BAKERY 
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "width": "90%",
              }
            }
          >
            93 - FOODSERVICE 
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "width": "90%",
              }
            }
          >
            99 - ELECTRONICS 
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "width": "90%",
              }
            }
          >
            199 - ELECTRONICS 
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
]
`;

exports[`FilterMenu Component Test renders the renderExceptionTypeCard and ExceptionMap FlatList 1`] = `
Array [
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.EXCEPTION_TYPE" translation]
      </Text>
      <Text
        style={
          Object {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        [missing "en.EXCEPTION.PRICE_OVERRIDE" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-up"
        size={25}
      />
    </View>
  </View>,
  <RCTScrollView
    data={
      Array [
        Object {
          "display": "[missing \\"en.EXCEPTION.NSFL\\" translation]",
          "selected": false,
          "value": "NSFL",
        },
        Object {
          "display": "[missing \\"en.EXCEPTION.CANCELLED\\" translation]",
          "selected": false,
          "value": "C",
        },
        Object {
          "display": "[missing \\"en.EXCEPTION.NEGATIVE_ON_HANDS\\" translation]",
          "selected": false,
          "value": "NO",
        },
        Object {
          "display": "[missing \\"en.EXCEPTION.NO_SALES\\" translation]",
          "selected": false,
          "value": "NS",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
      }
    }
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="exception button"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "width": "90%",
              }
            }
          >
            [missing "en.EXCEPTION.NSFL" translation]
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="exception button"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "width": "90%",
              }
            }
          >
            [missing "en.EXCEPTION.CANCELLED" translation]
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="exception button"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "width": "90%",
              }
            }
          >
            [missing "en.EXCEPTION.NEGATIVE_ON_HANDS" translation]
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="exception button"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              Object {
                "width": "90%",
              }
            }
          >
            [missing "en.EXCEPTION.NO_SALES" translation]
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
]
`;

exports[`FilterMenu Component Test the renderCategoryCollapsibleCard and calls dispatch() 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text>
      [missing "en.WORKLIST.CATEGORY" translation]
    </Text>
    <Text
      style={
        Object {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      5 [missing "en.GENERICS.SELECTED" translation]
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <Icon
      color="#616161"
      name="keyboard-arrow-down"
      size={25}
    />
  </View>
</View>
`;

exports[`FilterMenu Component Test the renderExceptionFilterCard component with an item selected 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "opacity": 1,
    }
  }
  testID="exception button"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "width": "10%",
      }
    }
  >
    <Icon
      color="#0071e9"
      name="checkbox-marked-outline"
      size={15}
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      Object {
        "width": "90%",
      }
    }
  >
    Nil Pick
  </Text>
</View>
`;

exports[`FilterMenu Component Test the renderExceptionFilterCard component without an item selected 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "opacity": 1,
    }
  }
  testID="exception button"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "width": "10%",
      }
    }
  >
    <Icon
      color="#0071e9"
      name="checkbox-blank-outline"
      size={15}
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      Object {
        "width": "90%",
      }
    }
  >
    Price Override
  </Text>
</View>
`;

exports[`FilterMenu Component Test the renderExceptionRadioFilterCard component with an item selected 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "opacity": 1,
    }
  }
  testID="radio exception button"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "width": "10%",
      }
    }
  >
    <Icon
      color="#0071e9"
      name="radiobox-marked"
      size={15}
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      Object {
        "width": "90%",
      }
    }
  >
    Rollover Audits
  </Text>
</View>
`;

exports[`FilterMenu Component Test the renderExceptionTypeCard and calls dispatch() 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text>
      [missing "en.WORKLIST.EXCEPTION_TYPE" translation]
    </Text>
    <Text
      style={
        Object {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      [missing "en.EXCEPTION.PRICE_OVERRIDE" translation]
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <Icon
      color="#616161"
      name="keyboard-arrow-down"
      size={25}
    />
  </View>
</View>
`;

exports[`FilterMenu Component Tests renderCategoryFilterCard component and calls onItemPress with an item selected 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "opacity": 1,
    }
  }
  testID="category button"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "width": "10%",
      }
    }
  >
    <Icon
      color="#0071e9"
      name="checkbox-marked-outline"
      size={15}
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      Object {
        "width": "90%",
      }
    }
  >
    12 - WINE 
  </Text>
</View>
`;

exports[`FilterMenu Component Tests renderCategoryFilterCard component and calls onItemPress without an item selected 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "opacity": 1,
    }
  }
  testID="category button"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "width": "10%",
      }
    }
  >
    <Icon
      color="#0071e9"
      name="checkbox-blank-outline"
      size={15}
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      Object {
        "width": "90%",
      }
    }
  >
    7 - TOYS 
  </Text>
</View>
`;

exports[`FilterMenu Component Tests renders the renderAreaFilterCard and calls Dispatch 1`] = `[Function]`;
